--- a/src/importer.ui
+++ b/src/importer.ui
@@ -270,7 +270,7 @@
   <customwidget>
    <class>Piano</class>
    <extends>QFrame</extends>
-   <header>src/piano.h</header>
+   <header>piano.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
