--- a/src/importer.ui
+++ b/src/importer.ui
@@ -164,6 +164,9 @@
         </item>
         <item>
          <widget class="QStackedWidget" name="stackedWidget">
+          <property name="currentIndex">
+           <number>0</number>
+          </property>
           <widget class="QWidget" name="pageAssoc">
            <layout class="QVBoxLayout" name="verticalLayout_4">
             <property name="leftMargin">
@@ -213,46 +216,62 @@
             </item>
            </layout>
           </widget>
+          <widget class="QWidget" name="pageVGM">
+           <layout class="QVBoxLayout" name="verticalLayout_6">
+            <property name="leftMargin">
+             <number>0</number>
+            </property>
+            <property name="topMargin">
+             <number>0</number>
+            </property>
+            <property name="rightMargin">
+             <number>0</number>
+            </property>
+            <property name="bottomMargin">
+             <number>0</number>
+            </property>
+            <item>
+             <widget class="QGroupBox" name="vgmOptions">
+              <property name="title">
+               <string>VGM options</string>
+              </property>
+              <layout class="QVBoxLayout" name="verticalLayout_5">
+               <item>
+                <widget class="QCheckBox" name="vgmVolumeMax">
+                 <property name="toolTip">
+                  <string>This option allows you to reduce the number of duplicates in the list by setting their volume to the maximum level.</string>
+                 </property>
+                 <property name="text">
+                  <string>Maximise volume</string>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QCheckBox" name="vgmIgnoreLfoFreq">
+                 <property name="toolTip">
+                  <string>This option allows you to reduce the number of duplicates in the list by ignoring any LFO frequency change events, just setting a zero value.</string>
+                 </property>
+                 <property name="text">
+                  <string>Ignore LFO frequency changes</string>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QCheckBox" name="vgmIgnoreLfoAmpl">
+                 <property name="toolTip">
+                  <string>This option allows you to reduce the number of duplicates in the list by ignoring any LFO amplitude change events, just setting a zero value.</string>
+                 </property>
+                 <property name="text">
+                  <string>Ignore LFO amplitude changes</string>
+                 </property>
+                </widget>
+               </item>
+              </layout>
+             </widget>
+            </item>
+           </layout>
+          </widget>
           <widget class="QWidget" name="pageReplace"/>
-         </widget>
-        </item>
-        <item>
-         <widget class="QGroupBox" name="vgmOptions">
-          <property name="title">
-           <string>VGM options</string>
-          </property>
-          <layout class="QVBoxLayout" name="verticalLayout_5">
-           <item>
-            <widget class="QCheckBox" name="vgmVolumeMax">
-             <property name="toolTip">
-              <string>This option allows you to reduce the number of duplicates in the list by setting their volume to the maximum level.</string>
-             </property>
-             <property name="text">
-              <string>Maximise volume</string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QCheckBox" name="vgmIgnoreLfoFreq">
-             <property name="toolTip">
-              <string>This option allows you to reduce the number of duplicates in the list by ignoring any LFO frequency change events, just setting a zero value.</string>
-             </property>
-             <property name="text">
-              <string>Ignore LFO frequency changes</string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QCheckBox" name="vgmIgnoreLfoAmpl">
-             <property name="toolTip">
-              <string>This option allows you to reduce the number of duplicates in the list by ignoring any LFO amplitude change events, just setting a zero value.</string>
-             </property>
-             <property name="text">
-              <string>Ignore LFO amplitude changes</string>
-             </property>
-            </widget>
-           </item>
-          </layout>
          </widget>
         </item>
         <item>
