--- a/src/bank_editor.ui
+++ b/src/bank_editor.ui
@@ -1372,6 +1372,36 @@
                </layout>
               </widget>
              </item>
+             <item>
+              <widget class="QLabel" name="chanAllocLabel">
+               <property name="text">
+                <string>Channels allocation mode</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QComboBox" name="chanAlloc">
+               <property name="toolTip">
+                <string>Choose the channel selection algorithm.
+
+- Cycling - the next channel will be selected by the iteration thgouh all channels in the list. 
+  If selected channel is busy, the oldest will be replaced.
+- First released - the next channel will be selected by finding any released (no playing note),
+  causing recently released note to re-use the same channel, which makes the the legato-like
+  effect. If all channels are busy, the oldest will be replaced.</string>
+               </property>
+               <item>
+                <property name="text">
+                 <string comment="Channels allocation mode name">Cycling</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string comment="Channels allocation mode name">First released</string>
+                </property>
+               </item>
+              </widget>
+             </item>
             </layout>
            </widget>
           </item>
